# matchmaking

./: .gitignore  README.md  TASK.md  docker-compose.yml
docs/: docs.md
matchmaking/solution/: CMakeLists.txt  Dockerfile  functions.cc  functions.h  functions_test.cc  main.cc  match.h  match_test.cc  request_manager.cc  request_manager.h  role.h  role_test.cc  solver.cc  solver.h  solver_mmr_greedy.cc  solver_mmr_greedy.h  solver_roles_greedy.cc  solver_roles_greedy.h  solver_test.cc  solver_time_greedy.cc  solver_time_greedy.h  team.h  team_test.cc  user.cc  user.h  user_test.cc  uuid_generator.cc  uuid_generator.h
